--- a/build.gradle
+++ b/build.gradle
@@ -10,12 +10,11 @@ repositories {
 }
 
 dependencies {
-    compile "com.google.code.gson:gson:2.7"
-
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile 'org.mockito:mockito-core:2.8.47'
     testCompile 'com.squareup.retrofit2:retrofit:2.2.0'
     testCompile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
     testCompile "com.squareup.retrofit2:converter-gson:2.2.0"
     testCompile 'io.reactivex.rxjava2:rxjava:2.1.2'
+    testCompile "com.google.code.gson:gson:2.7"
 }
